# pimovity

./: .gitignore  CMakeLists.txt  HowTo.md  Makefile  README.md  bibo  bibo.sh  calib_2k.xml  cam_bridge.py  coordinator.cpp  coordinator.hpp  darknet_to_movidius.sh  gengi  holooj.h  image_handler.cpp  install.sh  install_new.sh  main.c  main.cpp  ncs.c  ncs.cpp  ncs.h  ncs.hpp  ny2.c  ny2.cpp  ny2.h  ny2.hpp  raspi.py  raspistill.cat  socket.c  socket.cpp  socket.h  socket.hpp
calib/: CMakeCache.txt  CMakeLists.txt  Makefile  camera_calibration  camera_calibration.cpp  cmake_install.cmake  default.xml  images.xml  in_VID5.xml  out_camera_data.xml
data/: calib_1080.xml  calib_4k.xml
data/c#/: LoadImage.cs  ScriptProva.cs  SocketScript.cs
data/python/: cam_bridge.py  cam_stream.py  test.py
data/unity/: HoloOj.unitypackage
data/xml/: calib_1080.xml  calib_2k.xml  calib_4k.xml
data/yolov2/: labels.txt  yolov2-tiny-ale-0919_0.cfg
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  gengi
include/: coordinator.hpp  holocoo.hpp  holocoo.hpp.bak  holooj.hpp  ncs.hpp  ny2.hpp
src/: coordinator.cpp  coordinator.cpp.bak  holocoo.cpp  holocoo.cpp.bak+  main.cpp  ncs.cpp  ny2.cpp
